cmake_minimum_required(VERSION 3.5.0)
project(glsl_parser VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()

file(GLOB GLSL_PARSER_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(GLSL_PARSER_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include)
add_library(glsl_parser ${GLSL_PARSER_SOURCES})
include_directories(include)
export(TARGETS glsl_parser FILE glsl-parser-exports.cmake)
add_executable(parse_glsl ${CMAKE_CURRENT_SOURCE_DIR}/glsl_parser_test.cpp)
target_link_libraries(parse_glsl glsl_parser)
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
